--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.6"
+    "resend": "^6.1.3"
   }
 }
